// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render collapsed sortable block 1`] = `
<section
  class="block"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-shift"
      class="sortableHandle su-shift"
    />
  </div>
  <div
    class="content"
  >
    <article />
  </div>
</section>
`;

exports[`Render expanded sortable block 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-shift"
      class="sortableHandle su-shift"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-trash"
          class="su-trash clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="su-x"
          class="su-x clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content
    </article>
  </div>
</section>
`;

exports[`Render expanded sortable block with types 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-shift"
      class="sortableHandle su-shift"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="types"
      >
        <div
          class="select"
        >
          <button
            class="displayValue"
            type="button"
          >
            <div
              aria-label="Type 2"
              class="croppedText"
              title="Type 2"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Typ
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  e 2
                </span>
              </div>
              <div
                class="whole"
              >
                Type 2
              </div>
            </div>
            <span
              aria-label="su-arrow-down"
              class="toggle su-arrow-down"
            />
          </button>
        </div>
      </div>
      <div
        class="icons"
      >
        <span
          aria-label="su-trash"
          class="su-trash clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="su-x"
          class="su-x clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content and type type2
    </article>
  </div>
</section>
`;

exports[`Render expanded sortable block without remove icon 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span
      aria-label="su-shift"
      class="sortableHandle su-shift"
    />
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="icons"
      >
        <span
          aria-label="su-x"
          class="su-x clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article>
      Test for Test Content
    </article>
  </div>
</section>
`;
